syntax="proto2";
package prisma;

message Header {
    required string type_name = 1;
}

message Rpc {
    required Header header = 1;
}

message GraphqlId {
    oneof id_value {
        string string = 1;
        int64  int    = 2;
    }
}

message ValueContainer {
    oneof prisma_value {
        string    string     = 1;
        float     float      = 2;
        bool      boolean    = 3;
        string    date_time  = 4;
        string    enum       = 5;
        string    json       = 6;
        int32     int        = 7;
        int64     relation   = 8;
        bool      null       = 9;
        string    uuid       = 10;
        GraphqlId graphql_id = 11;
    }
}

message Result {
    repeated ValueContainer values = 1;
}

message Error {
    oneof value {
        string connection_error      = 1;
        string query_error           = 2;
        string no_results_error      = 3;
        string protobuf_decode_error = 4;
        string json_decode_error     = 5;
        string invalid_input_error   = 6;
    }
}

message GetNodeByWhere {
    required Header         header       = 1;
    required bytes          project_json = 2;
    required string         model_name   = 3;
    required string         field_name   = 4;
    required ValueContainer value        = 5;
}

message GetNodeByWhereResponse {
    required Header header = 1;

    oneof response {
        Result result = 2;
        Error  error  = 3;
    }
}
